--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "typescript-lib",
+  "name": "ygoprodeck.js",
   "version": "0.1.0",
   "main": "lib/index",
   "scripts": {
     "build": "tsc",
     "postinstall": "tsc",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'"
+    "docs": "typedoc"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.18",
-    "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
-    "chai": "^4.3.4",
-    "mocha": "^9.0.0",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typedoc": "^0.21.5"
   }
 }
