--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "ygoprodeck.js",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "lib/index",
   "scripts": {
     "build": "tsc",
-    "postinstall": "tsc",
+    "prepublish": "tsc",
     "docs": "typedoc"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "typescript": "^4.3.2"
+    "axios": "^0.23.0",
+    "fuse.js": "^6.4.6"
   },
   "devDependencies": {
-    "@types/node": "^15.12.2",
-    "ts-node": "^10.0.0",
-    "typedoc": "^0.21.5"
+    "@types/node": "^15.14.9",
+    "typedoc": "^0.21.9",
+    "typescript": "^4.3.5"
   }
 }
