--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ygoprodeck.js",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "lib/index",
   "scripts": {
     "build": "tsc",
@@ -8,8 +8,7 @@
     "docs": "typedoc"
   },
   "dependencies": {
-    "axios": "^0.23.0",
-    "fuse.js": "^6.4.6"
+    "axios": "^0.23.0"
   },
   "devDependencies": {
     "@types/node": "^15.14.9",
